# rolodexter

./: .gitignore  CHANGELOG.md  INTEGRATION_WISHLIST.md  LICENSE  README.md  SECURITY.md  pyproject.toml  rolodexter.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/maintenance/: release_and_distribution.md
docs/todo/: next_gpt.md  verified_gpt.md
scripts/: generate_i18n.py
src/rolodexter/: __init__.py  __main__.py  _phone.py  core.py  i18n.py  patterns.json
src/rolodexter/_data/: __init__.py  patterns.json
src/rolodexter/_data/i18n/: ar.json  cs.json  da.json  de.json  es.json  fi.json  fr.json  hi.json  it.json  ja.json  ko.json  nb.json  nl.json  pl.json  pt.json  ro.json  ru.json  sv.json  tr.json  zh.json
tests/: test_accuracy.py  test_i18n_cache_behavior.py  test_rolodexter.py  test_v28_features.py
